@@ -1,0 +1,6 @@
+cmake_minimum_required(VERSION 2.6)
+project(Cupt)
+
+add_subdirectory(cpp)
+add_subdirectory(doc)
+
