@@ -1,0 +1,1 @@
+usr/doc/* usr/share/doc/libcupt2-doc-experimental
